// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attribution in browser renders default attribution 1`] = `
<details
  className="Details-xi326o-3 Attribution__AttributionDetails-sc-11isnv6-4 ecFdAU"
  data-analytics-region="attribution"
  data-testid="attribution-details"
>
  <summary
    aria-label="Citation/Attribution"
    className="Attribution__AttributionSummary-sc-11isnv6-2 gobEtQ Details__Summary-xi326o-2 goqLfs"
  >
    <svg
      aria-hidden="true"
      className="Attribution__SummaryClosedIcon-sc-11isnv6-0 gSPJtD Details__ExpandIcon-xi326o-0 cVuUUi StyledIconBase-sc-bdy9j4 cCvWXa"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 192 512"
    >
      <path
        d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
        fill="currentColor"
      />
    </svg>
    <svg
      aria-hidden="true"
      className="Attribution__SummaryOpenIcon-sc-11isnv6-1 kRXAve Details__CollapseIcon-xi326o-1 jsdrhW StyledIconBase-sc-bdy9j4 cCvWXa"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 320 512"
    >
      <path
        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        fill="currentColor"
      />
    </svg>
    <span>
      Citation/Attribution
    </span>
  </summary>
  <div
    className="Attribution__Content-sc-11isnv6-3 bUUJqd"
    dangerouslySetInnerHTML={
      Object {
        "__html": "
<p>
  Want to cite, share, or modify this book? This book is Sweet License
  1.0 and you must attribute OpenStax.
</p>

<strong>Attribution information</strong>
<ul>
  <li>
    If you are redistributing all or part of this book in a print format,
    then you must include on every physical page the following attribution:
    <blockquote>
      Access for free at https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units
    </blockquote>
  </li>
  <li>
    If you are redistributing all or part of this book in a digital format,
    then you must include on every digital page view the following attribution:
    <blockquote>
      Access for free at <a href=\\"https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units\\">https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units</a>
    </blockquote>
  </li>
</ul>

<strong>Citation information</strong>
<ul>
  <li>
    Use the information below to generate a citation. We recommend using a
    citation tool such as
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://www.lib.ncsu.edu/citationbuilder/#/default/default\\">this one</a>.
    <ul>
      <li>
        Authors: Bam Bammerson
      </li>
      <li>
        Publisher/website: OpenStax
      </li>
      <li>
        Book title: Test Book 1
      </li>
      <li>
        Publication date: Jun 21, 2012
      </li>
      <li>
        Location: Houston, Texas
      </li>
      <li>
        Book URL: <a href=\\"https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units\\">https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units</a>
      </li>
      <li>
        Section URL: <a href=\\"https://openstax.orgcool path name\\">https://openstax.orgcool path name</a>
      </li>
    </ul>
  </li>
</ul>

<p>
  © Jun 21, 2012 OpenStax. Textbook content produced by OpenStax is licensed under a
  Sweet License 1.0 license. <strong>The OpenStax name, OpenStax logo, OpenStax book
  covers, OpenStax CNX name, and OpenStax CNX logo are not subject to the Creative Commons license and may
  not be reproduced without the prior and express written consent of Rice University.</strong>
</p>
",
      }
    }
  />
</details>
`;

exports[`Attribution in browser renders special licensing and attribution for HS Physics 1`] = `
<details
  className="Details-xi326o-3 Attribution__AttributionDetails-sc-11isnv6-4 ecFdAU"
  data-analytics-region="attribution"
  data-testid="attribution-details"
>
  <summary
    aria-label="Citation/Attribution"
    className="Attribution__AttributionSummary-sc-11isnv6-2 gobEtQ Details__Summary-xi326o-2 goqLfs"
  >
    <svg
      aria-hidden="true"
      className="Attribution__SummaryClosedIcon-sc-11isnv6-0 gSPJtD Details__ExpandIcon-xi326o-0 cVuUUi StyledIconBase-sc-bdy9j4 cCvWXa"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 192 512"
    >
      <path
        d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
        fill="currentColor"
      />
    </svg>
    <svg
      aria-hidden="true"
      className="Attribution__SummaryOpenIcon-sc-11isnv6-1 kRXAve Details__CollapseIcon-xi326o-1 jsdrhW StyledIconBase-sc-bdy9j4 cCvWXa"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 320 512"
    >
      <path
        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        fill="currentColor"
      />
    </svg>
    <span>
      Citation/Attribution
    </span>
  </summary>
  <div
    className="Attribution__Content-sc-11isnv6-3 bUUJqd"
    dangerouslySetInnerHTML={
      Object {
        "__html": "
<p>
  Want to cite, share, or modify this book? This book is
  <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://creativecommons.org/licenses/by/4.0/\\">
   Sweet License 1.0
  </a>
  and you must attribute Texas Education Agency (TEA). The original material is available at: &lt;a target=&quot;_blank&quot; rel=&quot;noopener&quot; href=&quot;https://www.texasgateway.org/book/tea-physics&quot;&gt;https://www.texasgateway.org/book/tea-physics&lt;/a&gt;. Changes were made to the original material,
  including updates to art, structure, and other content updates.
</p>

<strong>Attribution information</strong>
<ul>
  <li>
    If you are redistributing all or part of this book in a print format,
    then you must include on every physical page the following attribution:
    <blockquote>
      Access for free at https://openstax.org/books/cce64fde-f448-43b8-ae88-27705cceb0da@1.0/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units
    </blockquote>
  </li>
  <li>
    If you are redistributing all or part of this book in a digital format,
    then you must include on every digital page view the following attribution:
    <blockquote>
      Access for free at <a href=\\"https://openstax.org/books/cce64fde-f448-43b8-ae88-27705cceb0da@1.0/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units\\">https://openstax.org/books/cce64fde-f448-43b8-ae88-27705cceb0da@1.0/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units</a>
    </blockquote>
  </li>
</ul>

<strong>Citation information</strong>
<ul>
  <li>
    Use the information below to generate a citation. We recommend using a
    citation tool such as
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://www.lib.ncsu.edu/citationbuilder/#/default/default\\">this one</a>.
    <ul>
      <li>
        Authors: Bam Bammerson
      </li>
      <li>
        Publisher/website: OpenStax
      </li>
      <li>
        Book title: Test Book 1
      </li>
      <li>
        Publication date: Jun 21, 2012
      </li>
      <li>
        Location: Houston, Texas
      </li>
      <li>
        Book URL: <a href=\\"https://openstax.org/books/cce64fde-f448-43b8-ae88-27705cceb0da@1.0/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units\\">https://openstax.org/books/cce64fde-f448-43b8-ae88-27705cceb0da@1.0/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units</a>
      </li>
      <li>
        Section URL: <a href=\\"https://openstax.orgcool path name\\">https://openstax.orgcool path name</a>
      </li>
    </ul>
  </li>
</ul>

<p>
  © Jun 21, 2012 Texas Education Agency (TEA). <strong>The OpenStax name, OpenStax logo,
  OpenStax book covers, OpenStax CNX name, and OpenStax CNX logo are not subject to the Creative Commons license and may
  not be reproduced without the prior and express written consent of Rice University.</strong>
</p>
",
      }
    }
  />
</details>
`;

exports[`Attribution in browser renders special licensing and attribution for Intellectual Property 1`] = `
<details
  className="Details-xi326o-3 Attribution__AttributionDetails-sc-11isnv6-4 ecFdAU"
  data-analytics-region="attribution"
  data-testid="attribution-details"
>
  <summary
    aria-label="Citation/Attribution"
    className="Attribution__AttributionSummary-sc-11isnv6-2 gobEtQ Details__Summary-xi326o-2 goqLfs"
  >
    <svg
      aria-hidden="true"
      className="Attribution__SummaryClosedIcon-sc-11isnv6-0 gSPJtD Details__ExpandIcon-xi326o-0 cVuUUi StyledIconBase-sc-bdy9j4 cCvWXa"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 192 512"
    >
      <path
        d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
        fill="currentColor"
      />
    </svg>
    <svg
      aria-hidden="true"
      className="Attribution__SummaryOpenIcon-sc-11isnv6-1 kRXAve Details__CollapseIcon-xi326o-1 jsdrhW StyledIconBase-sc-bdy9j4 cCvWXa"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 320 512"
    >
      <path
        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        fill="currentColor"
      />
    </svg>
    <span>
      Citation/Attribution
    </span>
  </summary>
  <div
    className="Attribution__Content-sc-11isnv6-3 bUUJqd"
    dangerouslySetInnerHTML={
      Object {
        "__html": "
<p>
  Want to cite, share, or modify this book? This book is
  <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://creativecommons.org/licenses/by/4.0/\\">
   Sweet License 1.0
  </a>
  and you must attribute The Michelson 20MM Foundation. Changes were made to the original material,
  including updates to art, structure, and other content updates.
</p>

<strong>Attribution information</strong>
<ul>
  <li>
    If you are redistributing all or part of this book in a print format,
    then you must include on every physical page the following attribution:
    <blockquote>
      Access for free at https://openstax.org/books/3e49fb1f-aec7-4181-a479-036874e10240@1.0/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units
    </blockquote>
  </li>
  <li>
    If you are redistributing all or part of this book in a digital format,
    then you must include on every digital page view the following attribution:
    <blockquote>
      Access for free at <a href=\\"https://openstax.org/books/3e49fb1f-aec7-4181-a479-036874e10240@1.0/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units\\">https://openstax.org/books/3e49fb1f-aec7-4181-a479-036874e10240@1.0/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units</a>
    </blockquote>
  </li>
</ul>

<strong>Citation information</strong>
<ul>
  <li>
    Use the information below to generate a citation. We recommend using a
    citation tool such as
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://www.lib.ncsu.edu/citationbuilder/#/default/default\\">this one</a>.
    <ul>
      <li>
        Authors: Bam Bammerson
      </li>
      <li>
        Publisher/website: OpenStax
      </li>
      <li>
        Book title: Test Book 1
      </li>
      <li>
        Publication date: Jun 21, 2012
      </li>
      <li>
        Location: Houston, Texas
      </li>
      <li>
        Book URL: <a href=\\"https://openstax.org/books/3e49fb1f-aec7-4181-a479-036874e10240@1.0/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units\\">https://openstax.org/books/3e49fb1f-aec7-4181-a479-036874e10240@1.0/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units</a>
      </li>
      <li>
        Section URL: <a href=\\"https://openstax.orgcool path name\\">https://openstax.orgcool path name</a>
      </li>
    </ul>
  </li>
</ul>

<p>
  © Jun 21, 2012 The Michelson 20MM Foundation. <strong>The OpenStax name, OpenStax logo,
  OpenStax book covers, OpenStax CNX name, and OpenStax CNX logo are not subject to the Creative Commons license and may
  not be reproduced without the prior and express written consent of Rice University.</strong>
</p>
",
      }
    }
  />
</details>
`;

exports[`Attribution in browser renders special licensing and attribution for Statistics 1`] = `
<details
  className="Details-xi326o-3 Attribution__AttributionDetails-sc-11isnv6-4 ecFdAU"
  data-analytics-region="attribution"
  data-testid="attribution-details"
>
  <summary
    aria-label="Citation/Attribution"
    className="Attribution__AttributionSummary-sc-11isnv6-2 gobEtQ Details__Summary-xi326o-2 goqLfs"
  >
    <svg
      aria-hidden="true"
      className="Attribution__SummaryClosedIcon-sc-11isnv6-0 gSPJtD Details__ExpandIcon-xi326o-0 cVuUUi StyledIconBase-sc-bdy9j4 cCvWXa"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 192 512"
    >
      <path
        d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
        fill="currentColor"
      />
    </svg>
    <svg
      aria-hidden="true"
      className="Attribution__SummaryOpenIcon-sc-11isnv6-1 kRXAve Details__CollapseIcon-xi326o-1 jsdrhW StyledIconBase-sc-bdy9j4 cCvWXa"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 320 512"
    >
      <path
        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        fill="currentColor"
      />
    </svg>
    <span>
      Citation/Attribution
    </span>
  </summary>
  <div
    className="Attribution__Content-sc-11isnv6-3 bUUJqd"
    dangerouslySetInnerHTML={
      Object {
        "__html": "
<p>
  Want to cite, share, or modify this book? This book is
  <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://creativecommons.org/licenses/by/4.0/\\">
   Sweet License 1.0
  </a>
  and you must attribute Texas Education Agency (TEA). The original material is available at: &lt;a target=&quot;_blank&quot; rel=&quot;noopener&quot; href=&quot;https://www.texasgateway.org/book/tea-statistics&quot;&gt;https://www.texasgateway.org/book/tea-statistics&lt;/a&gt;. Changes were made to the original material,
  including updates to art, structure, and other content updates.
</p>

<strong>Attribution information</strong>
<ul>
  <li>
    If you are redistributing all or part of this book in a print format,
    then you must include on every physical page the following attribution:
    <blockquote>
      Access for free at https://openstax.org/books/394a1101-fd8f-4875-84fa-55f15b06ba66@1.0/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units
    </blockquote>
  </li>
  <li>
    If you are redistributing all or part of this book in a digital format,
    then you must include on every digital page view the following attribution:
    <blockquote>
      Access for free at <a href=\\"https://openstax.org/books/394a1101-fd8f-4875-84fa-55f15b06ba66@1.0/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units\\">https://openstax.org/books/394a1101-fd8f-4875-84fa-55f15b06ba66@1.0/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units</a>
    </blockquote>
  </li>
</ul>

<strong>Citation information</strong>
<ul>
  <li>
    Use the information below to generate a citation. We recommend using a
    citation tool such as
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://www.lib.ncsu.edu/citationbuilder/#/default/default\\">this one</a>.
    <ul>
      <li>
        Authors: Bam Bammerson
      </li>
      <li>
        Publisher/website: OpenStax
      </li>
      <li>
        Book title: Test Book 1
      </li>
      <li>
        Publication date: Jun 21, 2012
      </li>
      <li>
        Location: Houston, Texas
      </li>
      <li>
        Book URL: <a href=\\"https://openstax.org/books/394a1101-fd8f-4875-84fa-55f15b06ba66@1.0/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units\\">https://openstax.org/books/394a1101-fd8f-4875-84fa-55f15b06ba66@1.0/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units</a>
      </li>
      <li>
        Section URL: <a href=\\"https://openstax.orgcool path name\\">https://openstax.orgcool path name</a>
      </li>
    </ul>
  </li>
</ul>

<p>
  © Jun 21, 2012 Texas Education Agency (TEA). <strong>The OpenStax name, OpenStax logo,
  OpenStax book covers, OpenStax CNX name, and OpenStax CNX logo are not subject to the Creative Commons license and may
  not be reproduced without the prior and express written consent of Rice University.</strong>
</p>
",
      }
    }
  />
</details>
`;
